Incorporating Melissa's edits.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -1,6 +1,6 @@
-\textbf{\textit{What processes shape genetic variation both temporally and
-        spatially, partition evolutionary lineages, and generate and maintain
-        biodiversity?}} \\
+% \textbf{\textit{What processes shape genetic variation both temporally and
+%         spatially, partition evolutionary lineages, and generate and maintain
+%         biodiversity?}} \\
 \textbf{\textit{What processes control the generation and assembly of
         biodiversity?}}
 Elucidating answers to this question is the primary motivation of my research
@@ -68,7 +68,7 @@ hypotheses about diversification.
 % individual gene copies, is ideal when inferring the evolutionary patterns of
 % species-level characters, like ancestral ranges.
 
-\subsection*{Climate-Driven Diversification}
+\subsection*{Climate-driven diversification}
 One question I am passionate about is whether Quaternary climatic oscillations
 promoted diversification by fragmenting the distributions of species.
 % One focus of my current research seeks to determine whether Quaternary climatic
@@ -81,7 +81,7 @@ dramatic cyclical shifts in the extent of the terrestrial landscape during
 Quaternary glacial cycles.
 Many groups of islands in this region coalesced into aggregate islands during
 glacial periods when sea levels were up to 120m below current level; these
-islands where repeatedly fragmented during interglacial rises in sea level.
+islands were repeatedly fragmented during interglacial rises in sea level.
 
 % \begin{wrapfigure}{r}{0.44\textwidth}
 %   \vspace{-1.5em}
@@ -102,7 +102,7 @@ evolutionary history of two genera of geckos (\emph{Cyrtodactylus} and
 \emph{Gekko}) that are co-distributed across most of the islands of the
 Philippines\footnote{\label{Siler10}\shortfullcite{Siler2010}}\super{,}\footnote{\label{Siler12}\shortfullcite{Siler2012}}.
 We found that island complexes did explain a significant proportion of the
-genetic diversity, but populations from PAICs were not monophyletic, and there
+genetic diversity, but were not monophyletic, and there
 was no obvious pattern of diversification associated with the Pleistocene.
 We revealed complex histories for both genera that contradict many of the
 traditional areas of endemism predicted by Pleistocene island complexes.
@@ -115,8 +115,8 @@ In order to more directly test whether Quaternary glacial cycles promoted
 diversification, we used a broadly comparative approach\cref{Oaks12}.
 We accumulated genetic data from 22 distantly related taxa, representing five
 orders of terrestrial vertebrates.
-For each taxon, we sampled genetic data from a two populations currently on
-separate islands previously connected during glacial periods.
+For each taxon, we sampled genetic data from two populations currently on
+separate islands that were previously connected during glacial periods.
 If repeated bouts of island connectivity and isolation promoted
 diversification, the temporal distribution of divergences across the 22
 inter-island pairs of populations should be temporally clustered and correspond
@@ -198,7 +198,7 @@ a full-likelihood Bayesian framework.
 % using full likelihoods and Markov chain Monte Carlo.
 By analytically integrating over gene trees, the method will efficiently handle
 genome-scale datasets.
-By utilizing all of the information the data, the method promises to be much
+By utilizing all of the information in the data, the method promises to be much
 more powerful than its approximate-Bayesian counterparts, and will also be
 applicable at deeper evolutionary timescales.
 This new tool will allow evolutionary biologists to better leverage comparative
@@ -291,7 +291,7 @@ necessary computational resources to develop, test, and deploy these methods.
 \subsubsection*{Extending comparative phylogeographical model choice to a fully
     phylogenetic framework}
 While the full-likelihood Bayesian method I am currently developing promises to
-greatly improve the accuracy and power of phylogeographcial inference, I have
+greatly improve the accuracy and power of phylogeographical inference, I have
 plans to go even further and integrate the approach into a fully phylogenetic
 framework.
 I will do this by implementing a novel hierarchical Bayesian model for
@@ -309,8 +309,8 @@ restricted to comparing pairs of populations.
 % for determining whether the temporal pattern of divergences across taxa are
 % consistent with predictions of historical processes.
 
-\subsection*{Simultaneous Estimation of Population History and Structure: A
-Novel Approach}
+\subsection*{Simultaneous estimation of population history and structure: A
+novel approach}
 Currently, the estimation of coalescent-based phylogenies of recently
 diversified species entails a two-step process.
 First, some variant of a genetic clustering algorithm is used to estimate how
@@ -325,13 +325,14 @@ of the alleles.
 I plan to develop a more robust approach that integrates these two steps and
 makes population assignment a random variable to be estimated during the
 inference of the species tree.
-I will collaborate with Mark Holder to do this using a hierarchical Bayesian
-model that treats population assignment as Dirichlet process.
+I will collaborate with Dr.\ Mark Holder (University of Kansas) to do this
+using a hierarchical Bayesian model that treats population assignment as a
+Dirichlet process.
 % We will implement this method by incorporating a Gibbs-sampling proposal
 % mechanism into the BEAST MCMC machinery that numerically integrates over the
 % possible numbers of populations and individual assignments.
 
-\subsection*{Diversification and Adaptation of Lizards on Continental Islands
+\subsection*{Diversification and adaptation of lizards on continental islands
 of the Sunda Shelf}
 % The Sunda Shelf of Southeast Asia has been an incredibly dynamic landscape over
 % the past two million years.
@@ -386,7 +387,7 @@ long-term project to address these questions.
 % Universiti Sains Malaysia (USM).
 % We plan to approach different aspects of this study in a series of stages.
 
-For the first stage of this projcet, we will elucidate the evolutionary context
+For the first stage of this project, we will elucidate the evolutionary context
 of the island populations by inferring their relationships and demographic
 history.
 This will allow us to appropriately model the genetic covariance among
@@ -429,7 +430,7 @@ for the second stage of the project.
 The third stage of the project will aim to understand the evolutionary ecology
 of this system.
 We want to understand what intra-specific, inter-specific, and abiotic
-interactions influence the selection on the regions of the genome that control
+interactions influence selection on the regions of the genome that control
 important phenotypic characteristics.
 For example, are there particular ecological contexts that favor
 parthenogenesis in \emph{L.\ lugubris}?
