Fixing subsection to subsubsection.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -309,7 +309,7 @@ restricted to comparing pairs of populations.
 % for determining whether the temporal pattern of divergences across taxa are
 % consistent with predictions of historical processes.
 
-\subsection*{Simultaneous estimation of population history and structure: A
+\subsubsection*{Simultaneous estimation of population history and structure: A
 novel approach}
 Currently, the estimation of coalescent-based phylogenies of recently
 diversified species entails a two-step process.
