Adding student recruitment statement to intro.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -19,6 +19,9 @@ developing computational and bioinformatics tools to implement these
 statistical methods and ease data processing and management,
 and applying novel methods to genomic data to test
 hypotheses about diversification.
+Given the integrative nature of my research program, I seek to recruit graduate
+and undergraduate students from a variety of disciplines and with diverse
+backgrounds and interests.
 
 \section*{Previous Research}
 %%%%%%%%%%%%%%%%%%%%%
