--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -14,14 +14,21 @@ collection-based fieldwork,
 collecting genome-wide DNA sequence data via next-generation sequencing (NGS)
 technologies,
 developing model-based statistical procedures for inferring evolutionary
-history,
-developing computational and bioinformatics tools to implement these
-statistical methods and ease data processing and management,
-and applying novel methods to genomic data to test
+history from genomic datasets,
+implementing such methods in software packages,
+and ultimately applying these novel computational tools to genomic data to test
 hypotheses about diversification.
-Given the integrative nature of my research program, I seek to recruit graduate
-and undergraduate students from a variety of disciplines and with diverse
-backgrounds and interests.
+% I take an integrative approach to answering open-ended questions about
+% biodiversity, which requires critical thinking and creativity.
+% As a result, it is imperative that I involve students with diverse
+% backgrounds and interests, who can bring unique perspectives to the
+% challenges in my lab.
+Given the integrative nature of my research program, I seek to recruit students
+with diverse backgrounds and interests.
+The questions I am passionate about exploring are open-ended and require
+critical thinking and creativity.
+As a result, it is imperative that I involve students and collaborators with
+diverse backgrounds and perspectives to bring together unique insights.
 
 \section*{Previous Research}
 %%%%%%%%%%%%%%%%%%%%%
