Updating research statement.
Fixing error in NSF program name.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -434,8 +434,8 @@ selection versus drift in the evolution of these traits.
 % This offers a natural model system for studying the interplay between the
 % deterministic force of selection and the stochastic force of drift in shaping
 % the genomic landscapes and phenotypic characteristics of these populations.
-We will seek funding from the NSF Phylogenetic Evolutionary Genetics Program
-for the second stage of the project.
+We will seek funding from the NSF Evolutionary Genetics Program for the second
+stage of the project.
 
 The third stage of the project will aim to understand the evolutionary ecology
 of this system.
