Minor edit to intro.
'collection-based fieldwork' to 'fieldwork'.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -10,7 +10,8 @@ species to identify independent evolutionary lineages (i.e., species) and infer
 their demographic histories and relationships, testing for patterns predicted
 by current ecological factors and historical events.
 I use a broad suite of methods in this endeavor, including
-collection-based fieldwork,
+% collection-based fieldwork,
+fieldwork,
 collecting genome-wide DNA sequence data via next-generation sequencing (NGS)
 technologies,
 developing model-based statistical procedures for inferring evolutionary
