Minor edit to previous research.
'We found that island complexes...' to 'We found that populations within
island complexes...'.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -112,9 +112,9 @@ promoted diversification, collaborators and I have been studying the
 evolutionary history of two genera of geckos (\emph{Cyrtodactylus} and
 \emph{Gekko}) that are co-distributed across most of the islands of the
 Philippines\footnote{\label{Siler10}\shortfullcite{Siler2010}}\super{,}\footnote{\label{Siler12}\shortfullcite{Siler2012}}.
-We found that island complexes did explain a significant proportion of the
-genetic diversity, but were not monophyletic, and there
-was no obvious pattern of diversification associated with the Pleistocene.
+We found that populations within island complexes did explain a significant
+proportion of the genetic diversity, but were not monophyletic, and there was
+no obvious pattern of diversification associated with the Pleistocene.
 We revealed complex histories for both genera that contradict many of the
 traditional areas of endemism predicted by Pleistocene island complexes.
 Interestingly, for \emph{Gekko}, we found evidence that the genus colonized the
