Minor rewording to research statement.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -114,9 +114,11 @@ evolutionary history of two genera of geckos (\emph{Cyrtodactylus} and
 Philippines\footnote{\label{Siler10}\shortfullcite{Siler2010}}\super{,}\footnote{\label{Siler12}\shortfullcite{Siler2012}}.
 We found that populations within island complexes did explain a significant
 proportion of the genetic diversity, but were not monophyletic, and there was
-no obvious pattern of diversification associated with the Pleistocene.
+no obvious pattern of diversification associated with Pleistocene glacial
+cycles.
 We revealed complex histories for both genera that contradict many of the
-traditional areas of endemism predicted by Pleistocene island complexes.
+traditional areas of endemism predicted by island connectivity during glacial
+periods.
 Interestingly, for \emph{Gekko}, we found evidence that the genus colonized the
 Philippines by ``rafting'' on the Palawan Microcontinental Islands that rifted
 away from Mainland Asia and drifted toward the rest of the Philippine
