Some rewording throughout research statement.

--- a/research-statement-jro-main-short.tex
+++ b/research-statement-jro-main-short.tex
@@ -123,7 +123,7 @@ in sea level.
 % away from Mainland Asia and drifted toward the rest of the Philippine
 % Archipelago.
 
-In order to test whether Quaternary glacial cycles promoted diversification,
+In order to test whether glacial cycles promoted diversification,
 collaborators and I used a broadly comparative approach\cref{Oaks12}.
 We accumulated genetic data from island populations of 22 distantly related
 taxa, representing five orders of terrestrial vertebrates.
