--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -124,16 +124,17 @@ Philippines by ``rafting'' on the Palawan Microcontinental Islands that rifted
 away from Mainland Asia and drifted toward the rest of the Philippine
 Archipelago.
 
-In order to more directly test whether Quaternary glacial cycles promoted
+In order to more directly test whether glacial cycles promoted
 diversification, we used a broadly comparative approach\cref{Oaks12}.
-We accumulated genetic data from 22 distantly related taxa, representing five
-orders of terrestrial vertebrates.
+We accumulated genetic data from island populations of 22 distantly related
+taxa, representing five orders of terrestrial vertebrates.
 For each taxon, we sampled genetic data from two populations currently on
-separate islands that were previously connected during glacial periods.
+separate Philippine Islands that were previously connected during glacial
+periods.
 If repeated bouts of island connectivity and isolation promoted
 diversification, the temporal distribution of divergences across the 22
 inter-island pairs of populations should be temporally clustered and correspond
-with the interglacial rises in sea level that fragmented the islands.
+to interglacial rises in sea level that fragmented the islands.
 To test this prediction, we employed a popular Bayesian model-choice method,
 msBayes, to estimate the probabilities of models in which multiple sets of taxa
 diverged at the same time.
@@ -141,10 +142,10 @@ We found very strong support
 % (posterior probability of 0.982)
 for a single, recent, simultaneous divergence event shared by all 22 taxa.
 
-Suspicious of such strong support for a single model given the richness and
-stochasticity of the candidate models,
-we performed extensive simulation-based analyses to assess the ability of the
-msBayes method to detect random variation in divergence times.
+Suspicious of such strong support given the richness and stochasticity of the
+candidate models,
+I used computer simulations to assess the ability of the msBayes method to
+detect random variation in divergence times.
 The results of the simulations revealed that the method will often strongly
 support highly clustered models of divergence even when the taxa being compared
 diverged randomly over millions of generations.
@@ -158,8 +159,8 @@ Thus, our results from the empirical Philippines data were likely spurious.
 
 % Needed better method---did it
 Rather than abandon the approach, I formulated the full evolutionary model
-underlying the simulation-based msBayes procedure and, using fundamental
-principles of Bayesian model choice, identified theoretical reasons the method
+underlying the simulation-based msBayes procedure and, using first 
+principles of probability, identified theoretical reasons the method
 would tend to spuriously infer simultaneous divergence across
 taxa\footnote{\label{Oaks12}\shortfullcite{Oaks2012}}\super{,}\footnote{\label{Oaks14reply}\shortfullcite{Oaks2014reply}}.
 Guided by these insights, I developed a new model that uses more flexible prior
